// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CatalyticActivityView component should render catalytic activity 1`] = `
<DocumentFragment>
  <h3
    class="capitalize"
  >
    Catalytic activity
  </h3>
  <span
    class="text-block"
  >
     Reaction name
    <div>
      This reaction proceeds in the 
      <span
        data-testid="direction-text"
      >
        forward
      </span>
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 publication
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
       and the 
      <span
        data-testid="direction-text"
      >
        backward
      </span>
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 publication
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
       directions 
    </div>
    EC:EC:12112 (
    <a
      href="/uniprotkb?query=ec:EC:12112"
    >
      UniProtkb
    </a>
     | 
    <a
      class="external-link"
      href="https://enzyme.expasy.org/EC/EC:12112"
      rel="noopener"
      target="_blank"
    >
      ENZYME
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     | 
    <a
      class="external-link"
      href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
      rel="noopener"
      target="_blank"
    >
      Rhea
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
    )
  </span>
</DocumentFragment>
`;

exports[`CatalyticActivityView component should render catalytic activity when comment does not have reactionCrossReferences 1`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
     Reaction name
    <div>
      This reaction proceeds in the 
      <span
        data-testid="direction-text"
      >
        forward
      </span>
      <button
        aria-controls="0"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 publication
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="0"
      />
       and the 
      <span
        data-testid="direction-text"
      >
        backward
      </span>
      <button
        aria-controls="1"
        aria-expanded="false"
        class="svg-colour-reviewed evidence-tag"
        data-testid="evidence-tag-trigger"
        type="button"
      >
        <test-file-stub
          height="12"
          width="12"
        />
        <span
          class="evidence-tag__label"
        >
          1 publication
        </span>
      </button>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
        id="1"
      />
       directions 
    </div>
    EC:EC:12112 (
    <a
      href="/uniprotkb?query=ec:EC:12112"
    >
      UniProtkb
    </a>
     | 
    <a
      class="external-link"
      href="https://enzyme.expasy.org/EC/EC:12112"
      rel="noopener"
      target="_blank"
    >
      ENZYME
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
     | 
    <a
      class="external-link"
      href="https://www.rhea-db.org/rhea?query=ec:EC:12112"
      rel="noopener"
      target="_blank"
    >
      Rhea
      <test-file-stub
        data-testid="external-link-icon"
        width="12.5"
      />
    </a>
    )
  </span>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when one physiologicalReactions is present 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
     direction 
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
  </div>
</DocumentFragment>
`;

exports[`ReactionDirection component should render ReactionDirection when two physiologicalReactions are present and should be in correct order (forwards then backwards) 1`] = `
<DocumentFragment>
  <div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      forward
    </span>
    <button
      aria-controls="0"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="0"
    />
     and the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
    <button
      aria-controls="1"
      aria-expanded="false"
      class="svg-colour-reviewed evidence-tag"
      data-testid="evidence-tag-trigger"
      type="button"
    >
      <test-file-stub
        height="12"
        width="12"
      />
      <span
        class="evidence-tag__label"
      >
        1 publication
      </span>
    </button>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
      id="1"
    />
     directions 
  </div>
</DocumentFragment>
`;

exports[`RheaReactionVisualizer component should render RheaReactionVisualizer 1`] = `
<DocumentFragment>
  <div
    class="rhea-reaction-visualizer__toggle"
  >
    <test-file-stub
      width="1ch"
    />
    <button
      class="button tertiary"
      type="button"
    >
      View Rhea reaction
    </button>
  </div>
</DocumentFragment>
`;

exports[`ZoomModalContent component should render 1`] = `
<DocumentFragment>
  <div
    class="zoom-image-container"
  >
    <img
      alt="chebi:12345"
      style="display: none;"
    />
    <div
      class="loader-container"
    >
      <test-file-stub
        classname="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;
